Variaveis de configuracoes de taticas

--- a/src/player.conf
+++ b/src/player.conf
@@ -1,3 +1,18 @@
+tatica1_defender:0
+tatica2_defender:0
+tatica3_defender:0
+tatica4_defender:0
+tatica5_defender:0
+tatica1_midfielder:0
+tatica2_midfielder:0
+tatica3_midfielder:0
+tatica4_midfielder:0
+tatica5_midfielder:0
+tatica1_attacker:0
+tatica2_attacker:0
+tatica3_attacker:0
+tatica4_attacker:0
+tatica5_attacker:0
 player_conf_thr:0.85
 player_high_conf_thr:0.94
 ball_conf_thr:0.90
